Porting initial JS ToDoApp to Typescript

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.strike {
+  text-decoration: line-through;
+  text-decoration-color: rgb(235, 19, 19);
+}
